--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body{
    background:  #9099A2;
     
    margin: 100px;
-   background-image: url("angelisland.JPG");
+   background-image: url("angelisland.jpg");
    no-repeat center center fixed; 
      background-size: cover;
      -webkit-background-size: cover;
