--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body{
      -moz-background-size: cover;
      -o-background-size: cover;    
 }
-/* ************************************************************** */
+/* **************************************************************************************************************************************************************************** */
 h1{
 
   color: black;
@@ -130,8 +130,6 @@ animation: fadeIn 10s cubic-bezier(0,1.07,0.72,1.42);
 
 /* ************************************** */
 
-
-
 .anitext2wo{
     align-self: center;
 animation: fadeAndScale 10s cubic-bezier(0,1.07,0.72,1.42);
@@ -247,7 +245,13 @@ animation: fadeIn 10s cubic-bezier(0,1.07,0.72,1.42);
     }
 
 }
-/* ******************************************************************* */
+/* **************************************************************************************************************************************************************************** */
+
+
+
+
+
+/* **************************************************************************************************************************************************************************** */
 
 nav ul li a{
   color: aliceblue;
