--- a/main3.css
+++ b/main3.css
@@ -22,12 +22,17 @@ h1{
 p{
 
 background: white;
+animation: fadeAndScale 10s cubic-bezier(0,1.07,0.72,1.42);
+    transform-origin: right;
 
 
 }
 
 p2{
    color: white;
+    animation: fadeAndScale 10s cubic-bezier(0,1.07,0.72,1.42);
+    transform-origin: right;
+
 }
 
 #menu-outer{
@@ -58,3 +63,16 @@ p2{
 
 
 
+
+
+@keyframes fadeAndScale{
+    from{
+    opacity: 0;
+    transform scale3d(.75, .75, 1);
+    }
+    to{
+    opacity: 1;
+    transform: scale3d(1,1,1);
+    }
+
+}
